src/objects/Goal__c.object
<CustomObject>
    <description>The goal targets for various hiring managers</description>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Start_Date__c +122</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Specific the date for the goal begins to be valid</description>
        <inlineHelpText>Specific the date for the goal begins to be valid</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Goal</fullName>
        <columns>NAME</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>New Goal</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>GoalID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_Date_Rule</fullName>
        <active>true</active>
        <description>Start Date cannot be before today.</description>
        <errorConditionFormula>Start_Date__c  &lt; today()</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date cannot be before today.</errorMessage>
    </validationRules>
</CustomObject>